Fixes spacing

--- a/client/stylesheets/event.import.styl
+++ b/client/stylesheets/event.import.styl
@@ -96,6 +96,12 @@
     
 @import 'comments.import'
 
+@media (max-width: 1200px)
+
+  .main-facts
+    &:last-of-type
+      margin-bottom 30px
+
 @media (max-width: 768px)
   .event-head
     h1
